--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ if (UNIX AND NOT APPLE)
       set(HAVE_OGRE2 FALSE)
     else()
       message(STATUS "Looking for vulkan header (vulkan/vulkan_core.h) - found")
+      set(HAVE_VULKAN TRUE)
     endif()
   endif()
 endif()
