use GZ_RENDERING_HAVE_VULKAN
Signed-off-by: Ian Chen <ichen@osrfoundation.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,7 @@ if (UNIX AND NOT APPLE)
       set(HAVE_OGRE2 FALSE)
     else()
       message(STATUS "Looking for vulkan header (vulkan/vulkan_core.h) - found")
-      set(HAVE_VULKAN TRUE)
+      set(GZ_RENDERING_HAVE_VULKAN TRUE)
     endif()
   endif()
 endif()
