fix deleting ogre root when created (and deleted) in a thread
Signed-off-by: Ian Chen <ichen@openrobotics.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,9 @@ if ((NOT ${CMAKE_VERSION} VERSION_LESS 3.11) AND (NOT OpenGL_GL_PREFERENCE))
   set(OpenGL_GL_PREFERENCE "GLVND")
 endif()
 
-gz_find_package(OpenGL
+gz_find_package(OpenGL REQUIRED
+  COMPONENTS OpenGL
+  OPTIONAL_COMPONENTS EGL
   REQUIRED_BY ogre ogre2
   PKGCONFIG gl)
 
