--- a/ogre2/src/CMakeLists.txt
+++ b/ogre2/src/CMakeLists.txt
@@ -49,6 +49,7 @@ set (unversioned ${CMAKE_SHARED_LIBRARY_PREFIX}${PROJECT_NAME_NO_VERSION_LOWER}-
 install(TARGETS ${ogre2_target} DESTINATION ${IGNITION_RENDERING_ENGINE_INSTALL_DIR})
 
 if (WIN32)
+  message(STATUS "***DEBUG*** ${IGNITION_RENDERING_ENGINE_INSTALL_DIR}\/${versioned} -> ${IGNITION_RENDERING_ENGINE_INSTALL_DIR}\/${unversioned}")
   # disable MSVC inherit via dominance warning
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4250")
   INSTALL(CODE "EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy
