parse OGRE2_RESOURCE_PATH as list of strings
Signed-off-by: Ian Chen <ichen@openrobotics.org>

--- a/ogre2/src/CMakeLists.txt
+++ b/ogre2/src/CMakeLists.txt
@@ -15,10 +15,12 @@ set(engine_name "ogre2")
 
 gz_add_component(${engine_name} SOURCES ${sources} GET_TARGET_NAME ogre2_target)
 
+set(OGRE2_RESOURCE_PATH_STR "${OGRE2_RESOURCE_PATH}")
+string(REPLACE ";" ":" OGRE2_RESOURCE_PATH_STR "${OGRE2_RESOURCE_PATH}")
 set_property(
   SOURCE Ogre2RenderEngine.cc
   PROPERTY COMPILE_DEFINITIONS
-  OGRE2_RESOURCE_PATH="${OGRE2_RESOURCE_PATH}"
+  OGRE2_RESOURCE_PATH="${OGRE2_RESOURCE_PATH_STR}"
   OGRE2_VERSION="${OGRE2_VERSION}"
 )
 
