--- a/ogre2/src/terrain/Terra/CMakeLists.txt
+++ b/ogre2/src/terrain/Terra/CMakeLists.txt
@@ -29,13 +29,8 @@ add_definitions(-DOGRE_IGNORE_UNKNOWN_DEBUG)
 #  $<$<CONFIG:Debug>:DEBUG=1 _DEBUG=1>)
 
 target_include_directories(${PROJECT_NAME}
-  PRIVATE
-    # Hlms files inside Hlms/Pbs do not have #include <Hlms/Pbs/...> thus
-    # we must add this one manually for this to build correctly
-    ${OGRE2_INCLUDE}/Hlms/Pbs
-    ${OGRE2_INCLUDE}/Hlms/Common
   PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE GzOGRE2::GzOGRE2)
+target_link_libraries(${PROJECT_NAME} PRIVATE ogre_next_vendor::OgreMain ogre_next_vendor::HlmsPbs ogre_next_vendor::PlanarReflections)
