--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,7 +163,7 @@ set(GZ_RENDERING_ENGINE_RELATIVE_INSTALL_DIR
   ${GZ_LIB_INSTALL_DIR}/gz-${GZ_DESIGNATION}-${PROJECT_VERSION_MAJOR}/engine-plugins
 )
 set(GZ_RENDERING_ENGINE_INSTALL_DIR
-  ${GZ_RENDERING_ENGINE_RELATIVE_INSTALL_DIR})
+  ${CMAKE_INSTALL_PREFIX}/${GZ_RENDERING_ENGINE_RELATIVE_INSTALL_DIR})
 
 
 #--------------------------------------
@@ -193,7 +193,7 @@ else()
 endif()
 
 set(GZ_RENDERING_RELATIVE_RESOURCE_PATH ${GZ_DATA_INSTALL_DIR})
-set(GZ_RENDERING_RESOURCE_PATH ${GZ_RENDERING_RELATIVE_RESOURCE_PATH})
+set(GZ_RENDERING_RESOURCE_PATH ${CMAKE_INSTALL_PREFIX}/${GZ_RENDERING_RELATIVE_RESOURCE_PATH})
 
 #============================================================================
 # Configure the build
