Fix simple_demo on Windows
Signed-off-by: Silvio Traversaro <silvio.traversaro@iit.it>

--- a/examples/simple_demo/CMakeLists.txt
+++ b/examples/simple_demo/CMakeLists.txt
@@ -17,7 +17,9 @@ if (NOT APPLE)
   link_directories(${GLEW_LIBRARY_DIRS})
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
+if(NOT MSVC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
+endif()
 
 add_executable(simple_demo Main.cc GlutWindow.cc)
 
