Chek if policy exists
Signed-off-by: Jose Luis Rivero <jrivero@osrfoundation.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,9 @@ if(NOT MSVC)
   # Find CUDA
   # Module is being removed in CMake and needs a non trivial
   # migration https://cmake.org/cmake/help/latest/policy/CMP0146.html
-  cmake_policy(SET CMP0146 OLD)
+  if(POLICY CMP0146)
+    cmake_policy(SET CMP0146 OLD)
+  enddif()
   find_package(CUDA)
 
   #--------------------------------------
