--- a/package.xml
+++ b/package.xml
@@ -10,7 +10,7 @@
 
   <buildtool_depend>cmake</buildtool_depend>
 
-  <build_depend>gz-cmake</build_depend>
+  <build_depend>gz-cmake3</build_depend>
 
   <depend>glut</depend>
   <depend>gz-common5</depend>
