Disable Unit test that have segfaults on Mac (#1023)
* Remove camera.cc from integration tests

Signed-off-by: Crola1702 <cristobal.arroyo@ekumenlabs.com>

* Remove failing integration tests

Signed-off-by: Crola1702 <cristobal.arroyo@ekumenlabs.com>

* Disable ArrowVisual Test

Signed-off-by: Crola1702 <cristobal.arroyo@ekumenlabs.com>

* Disable Unit test that have segfaults on Mac

Signed-off-by: Crola1702 <cristobal.arroyo@ekumenlabs.com>

* Disable other tests

Signed-off-by: Crola1702 <cristobal.arroyo@ekumenlabs.com>

* Disable all tests that have segfaults in MacOs

Signed-off-by: Crola1702 <cristobal.arroyo@ekumenlabs.com>

---------

Signed-off-by: Crola1702 <cristobal.arroyo@ekumenlabs.com>

--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -10,6 +10,15 @@ set(tests
   thermal_camera.cc
 )
 
+if (APPLE)
+  list(REMOVE_ITEM tests camera.cc)
+  list(REMOVE_ITEM tests depth_camera.cc)
+  list(REMOVE_ITEM tests render_pass.cc)
+  list(REMOVE_ITEM tests shadows.cc)
+  list(REMOVE_ITEM tests scene.cc)
+  list(REMOVE_ITEM tests thermal_camera.cc)
+endif()
+
 link_directories(${PROJECT_BINARY_DIR}/test)
 
 # Test symbols having the right name on linux only
