--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -23,7 +23,7 @@ if (APPLE)
   list(REMOVE_ITEM tests shadows.cc)
   list(REMOVE_ITEM tests scene.cc)
   list(REMOVE_ITEM tests thermal_camera.cc)
-  list(REMOVE_ITEM tessts lidar_visual.cc)
+  list(REMOVE_ITEM tests lidar_visual.cc)
 endif()
 
 link_directories(${PROJECT_BINARY_DIR}/test)
