Install Roboto fonts to ogre plugin
Signed-off-by: __zqy__ <zhaoqingyou315@gmail.com>

--- a/ogre/src/media/fonts/CMakeLists.txt
+++ b/ogre/src/media/fonts/CMakeLists.txt
@@ -2,3 +2,4 @@ file(GLOB files "*ttf" "*png" "*fontdef")
 
 install(FILES ${files} DESTINATION ${GZ_RENDERING_RELATIVE_RESOURCE_PATH}/ogre/media/fonts)
 install(DIRECTORY liberation-sans DESTINATION ${GZ_RENDERING_RELATIVE_RESOURCE_PATH}/ogre/media/fonts)
+install(DIRECTORY roboto DESTINATION ${GZ_RENDERING_RELATIVE_RESOURCE_PATH}/ogre/media/fonts)
