--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - 'ign-rendering[0-9]'
-      - 'gz-rendering[0-9]?'
+      - 'gz-rendering[1-9]?[0-9]'
       - 'main'
 
 jobs:
@@ -20,6 +20,16 @@ jobs:
         uses: gazebo-tooling/action-gz-ci@jammy
         with:
           codecov-enabled: true
+  noble-ci:
+    runs-on: ubuntu-latest
+    name: Ubuntu Noble CI
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Compile and test
+        id: ci
+        uses: gazebo-tooling/action-gz-ci@noble
+        with:
           cppcheck-enabled: true
           cpplint-enabled: true
           doxygen-enabled: true
