--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -17,7 +17,7 @@ jobs:
       shell: bash
       run: |
         curl -LO https://raw.githubusercontent.com/gazebo-tooling/release-tools/master/jenkins-scripts/tools/detect_cmake_major_version.py
-        echo PACKAGE="$LIBRARY_NAME$(python3 detect_cmake_major_version tmp/gz-rendering/CMakeLists.txt)"" >> $GITHUB_ENV
+        echo PACKAGE="$LIBRARY_NAME$(python3 detect_cmake_major_version tmp/gz-rendering/CMakeLists.txt)" >> $GITHUB_ENV
     - name: setup-pixi
       uses: prefix-dev/setup-pixi@v0.8.1
       with:
