--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Window CI
     env:
       LIBRARY_NAME: gz-rendering
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
 
     - uses: actions/checkout@v4
