--- a/examples/render_pass/CMakeLists.txt
+++ b/examples/render_pass/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
 project(gz-rendering-render-pass)
 
-find_package(gz-rendering10)
+find_package(gz-rendering)
 
 find_package(GLUT REQUIRED)
 include_directories(SYSTEM ${GLUT_INCLUDE_DIRS})
