--- a/ogre/src/CMakeLists.txt
+++ b/ogre/src/CMakeLists.txt
@@ -32,9 +32,9 @@ set_property(
 
 target_link_libraries(${ogre_target}
   PUBLIC
-    ${gz-common${GZ_COMMON_VER}_LIBRARIES}
+    ${gz-common_LIBRARIES}
   PRIVATE
-    gz-plugin${GZ_PLUGIN_VER}::register
+    gz-plugin::register
     ${OPENGL_LIBRARIES}
     GzOGRE::GzOGRE
     )
