--- a/examples/frustum_visual/CMakeLists.txt
+++ b/examples/frustum_visual/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22.1 FATAL_ERROR)
 project(gz-rendering-frustum-visual)
-find_package(gz-rendering10 REQUIRED)
+find_package(gz-rendering REQUIRED)
 
 find_package(GLUT REQUIRED)
 include_directories(SYSTEM ${GLUT_INCLUDE_DIRS})
