Fix workflow configuration
* Fix package name in windows build
* Disable Jammy CI

Signed-off-by: Steve Peters <scpeters@openrobotics.org>

--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -6,7 +6,7 @@ jobs:
   build:
     name: Window CI
     env:
-      PACKAGE: gz-rendering10
+      PACKAGE: gz-rendering
     runs-on: windows-latest
     steps:
     - name: setup-pixi
