--- a/include/gz/rendering/config.hh.in
+++ b/include/gz/rendering/config.hh.in
@@ -38,6 +38,7 @@
 
 #cmakedefine GZ_RENDERING_HAVE_OGRE 1
 #cmakedefine GZ_RENDERING_HAVE_OGRE2 1
+#cmakedefine GZ_RENDERING_HAVE_OGRE2_OVERLAY 1
 #cmakedefine GZ_RENDERING_HAVE_OPTIX 1
 #cmakedefine GZ_RENDERING_HAVE_VULKAN 1
 
